8089563: Javascript Timing Events stop work on system clock changes at past

Implemented monotonicallyIncreasingTime() taking reference from glib library

Reviewed-by: arajkumar, kcr, mbilla